# svcmgr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PHASE0_COMPLETION.md  README.md  TESTING.md  rustc-ice-2026-02-23T08_25_06-495669.txt  rustc-ice-2026-02-23T08_25_06-495773.txt  rustc-ice-2026-02-23T08_54_46-676655.txt
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  docker.yml  test.yml
docs/: ARCHITECTURE_ZH.md  DESIGN_TESTING_STRATEGY.md  DESIGN_TTY_CLOUDFLARED.md  DESIGN_WEB_FRAMEWORK.md  MISE_REDESIGN_RESEARCH_ZH.md  PHASE1_COMPLETE.md  PHASE2.1_COMPLETE.md  PHASE2.3_COMPLETE.md  PHASE2.4_COMPLETE.md  PHASE2.5_COMPLETE.md  PHASE2.6_COMPLETE.md  PRE_COMMIT_HOOK.md
frontend/.lovable/: plan.md
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  (+1 more)
openspec/: AGENTS.md  FRONTEND_DELIVERY.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  SUMMARY.md  project.md
openspec/specs/: 00-architecture-overview.md  01-atom-git.md  01-config-design.md  02-atom-template.md  02-scheduler-engine.md  03-atom-mise.md  03-process-manager.md  04-atom-supervisor.md  04-atom-systemd.md  04-git-versioning.md  05-atom-crontab.md  05-atom-scheduler.md  05-web-service.md  06-atom-tunnel.md  06-feature-flags.md  07-atom-proxy.md  07-mise-integration.md  08-config-validation.md  09-credential-management.md  10-api-overview.md  10-feature-systemd-service.md  11-api-services.md  11-feature-crontab.md  12-api-tasks.md  12-feature-mise.md  13-api-tools.md  13-feature-nginx-proxy.md  14-api-config.md  14-feature-cloudflare-tunnel.md  15-api-env.md  15-feature-config-management.md  16-feature-webtty.md  20-api-design.md  20-cli-interface.md  20-implementation-phases.md  21-feature-systemd.md  21-migration-guide.md  22-breaking-changes.md  22-feature-crontab.md  23-feature-mise.md  (+10 more)
scripts/: pre-commit.sh  setup-dev.sh
src/: error.rs  lib.rs  main.rs
src/atoms/: crontab.rs  git.rs  git.rs.backup  mise.rs  mod.rs  proxy.rs  systemd.rs  template.rs  tunnel.rs
src/backend/: lib.rs  main.rs
src/cli/: mod.rs
templates/cloudflared/: cloudflared.service.j2
templates/crontab/: daily-task.cron.j2
templates/mise/: shell-task.mise.j2
templates/nginx/: http-proxy.conf.j2  nginx.conf.j2  static-site.conf.j2  tcp-proxy.conf.j2  websocket-proxy.conf.j2
templates/systemd/: simple-service.service.j2
tests/: config_api_basic.rs  config_api_integration.rs  git_tests.rs  phase2_integration.rs  phase3_http_server.rs  phase3_proxy.rs  phase3_rest_api.rs  phase4_cron_integration.rs  phase4_env_integration.rs  phase4_env_unit.rs  phase4_event_system.rs  phase4_git_versioning.rs  port_adapter_integration.rs  service_api_basic.rs  task_api_basic.rs  task_api_integration.rs
tests/fixtures/: cron-tasks.toml  http-routes.toml  invalid-circular-deps.toml  invalid-missing-task.toml  invalid-syntax.toml  multi-service.toml  service-with-deps.toml  simple-service.toml
(+110 files in other folders)
