[package]
name = "svcmgr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svcmgr"
path = "src/backend/main.rs"

[lib]
name = "svcmgr"
path = "src/backend/lib.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
cron = "0.15.0"
dirs = "6.0.0"
futures = { version = "0.3.32", features = ["async-await"] }
git2 = "0.20.4"
libc = "0.2"
minijinja = "2.5"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.25.0"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
tokio-test = "0.4"
