[package]
name = "svcmgr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svcmgr"
path = "src/backend/main.rs"

[lib]
name = "svcmgr"
path = "src/backend/lib.rs"

[features]
# 默认特性（不包含 cgroups，保持最大兼容性）
default = []

# cgroups v2 资源限制（可选特性，仅 Linux 平台）
cgroups = []

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
cron = "0.15.0"
dirs = "6.0.0"
futures = { version = "0.3.32", features = ["async-await"] }
git2 = "0.20.4"
humantime-serde = "1.1.1"
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
minijinja = "2.5"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
http-body-util = "0.1.3"
petgraph = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.25.0"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
tokio-test = "0.4"

